--- a/index.html
+++ b/index.html
@@ -1,22 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <script src="https://cdn.tailwindcss.com"></script>
-   <title>Tea House</title>
-</head>
-<body>
-   <header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tea House</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/3fceb09552.js"
+      crossorigin="anonymous"
+    ></script>
+    <style>
+      .primary-font {
+        font-family: "Manrope", serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+      }
+    </style>
 
-   </header>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+            },
+          },
+        },
+      };
+    </script>
+  </head>
+  <body class="primary-font">
+    <main class="max-w-screen-lg mx-auto px-5 md:px-0">
+      <!-- Header section -->
+      <header class="flex pt-10 mb-28">
+        <!-- Text contet -->
+        <div>
+          <h1 class="primary-font font-extrabold text-5xl md:text-7xl">
+            It's good <br />
+            tea time at The Tea House
+          </h1>
+          <br />
+          <p class="primary-font font-medium text-base text-[#777777] w-3/4">
+            Tea and Botanical Solutions Supplier Give Optimum Satisfaction To
+            Your Taste Buds.
+          </p>
+          <br />
+          <button
+            class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white font-bold text-lg p-4 rounded-lg"
+          >
+            Explore More <i class="fa-solid fa-arrow-right -rotate-45"></i>
+          </button>
+        </div>
 
-   <main>
+        <!-- Image content //[900px] -->
+        <div class="relative">
+          <div>
+            <img class="w-[900px] pt-12" src="images/banner.png" alt="" /> 
+          </div>
+          <div
+            class="absolute space-x-3 flex items-center bg-white shadow-[0_7px_50px_0_rgba(0,0,0,0.06)] px-2 py-2 md:px-6 md:py-4 rounded-lg -mt-20 ml-8"
+          >
+            <div>
+              <i class="fa-solid fa-star text-amber-400 text-2xl"></i>
+            </div>
+            <div>
+              <h3 class="font-extrabold text-3xl">5.00</h3>
+              <p class="text-[#777777] font-semibold text-base">
+                Trust Pilot Ratings
+              </p>
+            </div>
+          </div>
+        </div>
+      </header>
+    </main>
 
-   </main>
-
-   <footer>
-      
-   </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
