--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
   <body class="primary-font">
     <main class="max-w-screen-lg mx-auto px-5 md:px-0">
       <!-- Header section -->
-      <header class="flex pt-10 mb-28">
+      <header class="flex flex-col md:flex-row pt-10 mb-28">
         <!-- Text contet -->
-        <div>
+        <div class="">
           <h1 class="primary-font font-extrabold text-5xl md:text-7xl">
             It's good <br />
             tea time at The Tea House
@@ -62,7 +62,7 @@
         <!-- Image content //[900px] -->
         <div class="relative">
           <div>
-            <img class="w-[900px] pt-12" src="images/banner.png" alt="" /> 
+            <img class="w-[900px] pt-12" src="images/banner.png" alt="" />
           </div>
           <div
             class="absolute space-x-3 flex items-center bg-white shadow-[0_7px_50px_0_rgba(0,0,0,0.06)] px-2 py-2 md:px-6 md:py-4 rounded-lg -mt-20 ml-8"
@@ -79,6 +79,75 @@
           </div>
         </div>
       </header>
+
+      <!-- Featured product -->
+      <section class="mb-8">
+        <h1 class="text-4xl font-extrabold text-center">
+          Our Featured Products
+        </h1>
+        <br />
+        <p
+          class="text-base text-[#777777] font-medium text-center max-w-4xl m-auto"
+        >
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words which don't look even slightly believable.
+        </p>
+        <br />
+        <!-- card container -->
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-5 text-center">
+          <!-- card-1 -->
+          <div
+            class="rounded-lg bg-gradient-to-b from-[#F4F4F4] to-white flex flex-col justify-center items-center space-y-7 p-7"
+          >
+            <img src="images/tea-1.png" alt="" />
+            <div>
+              <h2 class="text-2xl font-extrabold">Milk Tea</h2>
+              <p class="text-base font-semibold text-[#777777]">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+          <!-- card-2 -->
+          <div
+            class="rounded-lg bg-gradient-to-b from-[#F4F4F4] to-white flex flex-col justify-center items-center space-y-7 p-7"
+          >
+            <img src="images/tea-2.png" alt="" />
+            <div>
+              <h2 class="text-2xl font-extrabold">Black Tea</h2>
+              <p class="text-base font-semibold text-[#777777]">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+          <!-- card-3 -->
+          <div
+            class="rounded-lg bg-gradient-to-b from-[#F4F4F4] to-white flex flex-col justify-center items-center space-y-7 p-7"
+          >
+            <img src="images/tea-3.png" alt="" />
+            <div>
+              <h2 class="text-2xl font-extrabold">Lemon Tea</h2>
+              <p class="text-base font-semibold text-[#777777]">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+          <!-- card-4 -->
+          <div
+            class="rounded-lg bg-gradient-to-b from-[#F4F4F4] to-white flex flex-col justify-center items-center space-y-7 p-7"
+          >
+            <img src="images/tea-4.png" alt="" />
+            <div>
+              <h2 class="text-2xl font-extrabold">Green Tea</h2>
+              <p class="text-base font-semibold text-[#777777]">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      
     </main>
 
     <footer></footer>
