--- a/index.html
+++ b/index.html
@@ -147,6 +147,53 @@
         </div>
       </section>
 
+      <!-- Great Tea Section -->
+      <section class="mb-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
+          <!-- image section -->
+          <div class="grid grid-cols-2 grid-rows-3 gap-4">
+            <div
+              class="opacity-10 bg-gradient-to-r from-[#ff0000] to-[#ff8937] rounded-xl"
+            ></div>
+            <div class="row-span-2 bg-[#E6A6231A] rounded-xl">
+              <img class="mx-auto my-11 items-center" src="images/fresh-1.png" alt="">
+            </div>
+            <div class="row-span-2 bg-[#5776391A] rounded-xl">
+              <img class="mx-auto my-11 items-center" src="images/fresh-2.png" alt="">
+            </div>
+            <div
+              class=" bg-gradient-to-r from-gray-300 to-white rounded-xl"
+            ></div>
+          </div>
+
+          <!-- Text Section -->
+          <div class="">
+            <h1 class="text-5xl font-extrabold leading-normal">
+              Great Tea, Freshly Presented
+            </h1>
+            <p class="text-base font-medium text-[#777777] leading-7">
+              The meaning of gong cha is chanese is to provide the best tea to
+              emperor from all possessions . It represents the highest quality
+              and self expectation. Establishing in 2006, Gong cha had been
+              deeply appreciated by its custoers because of good words of mouth
+              and unique customized service orginated from Taiwan.
+            </p>
+            <br />
+            <h4 class="text-xl font-extrabold mb-4">Unique Taste</h4>
+            <p class="text-base font-medium text-[#777777]">
+              A Unique and different style from other teapots gives a luxurious
+              and minimalist impression
+            </p>
+            <br />
+            <h4 class="text-xl font-extrabold">Premium Quality</h4>
+            <p class="text-base font-medium text-[#777777]">
+              Premium Quality that makes tea more elegant and more durable when
+              you use it.
+            </p>
+          </div>
+        </div>
+      </section>
+
       
     </main>
 
