--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </header>
 
       <!-- Featured product -->
-      <section class="mb-8">
+      <section class="mb-24">
         <h1 class="text-4xl font-extrabold text-center">
           Our Featured Products
         </h1>
@@ -148,7 +148,7 @@
       </section>
 
       <!-- Great Tea Section -->
-      <section class="mb-8">
+      <section class="mb-24">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
           <!-- image section -->
           <div class="grid grid-cols-2 grid-rows-3 gap-4">
@@ -156,13 +156,21 @@
               class="opacity-10 bg-gradient-to-r from-[#ff0000] to-[#ff8937] rounded-xl"
             ></div>
             <div class="row-span-2 bg-[#E6A6231A] rounded-xl">
-              <img class="mx-auto my-11 items-center" src="images/fresh-1.png" alt="">
+              <img
+                class="mx-auto my-11 items-center"
+                src="images/fresh-1.png"
+                alt=""
+              />
             </div>
             <div class="row-span-2 bg-[#5776391A] rounded-xl">
-              <img class="mx-auto my-11 items-center" src="images/fresh-2.png" alt="">
+              <img
+                class="mx-auto my-11 items-center"
+                src="images/fresh-2.png"
+                alt=""
+              />
             </div>
             <div
-              class=" bg-gradient-to-r from-gray-300 to-white rounded-xl"
+              class="bg-gradient-to-r from-gray-300 to-white rounded-xl"
             ></div>
           </div>
 
@@ -190,6 +198,100 @@
               Premium Quality that makes tea more elegant and more durable when
               you use it.
             </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Meet client section -->
+      <section class="mb-24 mt-8">
+        <div
+          class="bg-gradient-to-r from-[#ff8937] to-[#ff0000] rounded-lg grid grid-cols-1 md:grid-cols-2 text-white px-6 pt-10 pb-20 md:px-12 md:py-20 gap-10"
+        >
+          <!-- Text section -->
+          <div class="flex justify-start items-center">
+            <div class="w-full md:w-11/12">
+              <h1 class="text-5xl font-extrabold leading-normal">
+                Meet Our Super Clients
+              </h1>
+              <br />
+              <p class="text-base font-medium leading-6">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+                slightly believable.
+              </p>
+              <br />
+              <button
+                class="bg-white text-[#FF0000] font-bold text-lg px-7 py-3 rounded-lg gap-14 md:gap-0 lg:gap-0"
+              >
+                Show All
+              </button>
+            </div>
+          </div>
+
+          <!-- Review section -->
+
+          <div class="relative p-0 md:p-2">
+            <!-- Middle card -->
+            <div class="absolute z-10 top-40 md:top-36">
+              <div
+                class="bg-white text-black rounded-lg w-full left-0 md:left-16 md:w-11/12"
+              >
+                <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                  <img class="p-1" src="images/client.png " alt="" />
+                </div>
+                <div class="pl-12 pr-6 py-10">
+                  <p class="text-base font-semibold text-[#777777] leading-7">
+                    We are providing the best and suitable home insurance
+                    services for the people who are interested to treatment
+                  </p>
+                  <br />
+                  <h4 class="font-bold text-base">Ilham Yuda</h4>
+                  <h4 class="text-base font-semibold text-[#777777]">
+                    Businessman
+                  </h4>
+                </div>
+              </div>
+            </div>
+            <!-- top card -->
+            <div
+              class="opacity-35 relative bg-white text-black rounded-lg w-full left-0 md:left-16 md:w-11/12"
+            >
+              <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                <img class="p-1" src="images/client.png " alt="" />
+              </div>
+              <div class="pl-12 pr-6 py-10">
+                <p class="text-base font-semibold text-[#777777] leading-7">
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+                <br />
+                <h4 class="font-bold text-base">Ilham Yuda</h4>
+                <h4 class="text-base font-semibold text-[#777777]">
+                  Businessman
+                </h4>
+              </div>
+            </div>
+
+            <!-- Bottom card -->
+            <div
+              class="opacity-35 relative top-10 bg-white text-black rounded-lg w-full left-0 md:left-16 lg:left-16 md:w-11/12"
+            >
+              <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                <img class="p-1" src="images/client.png " alt="" />
+              </div>
+              <div class="pl-12 pr-6 py-10">
+                <p class="text-base font-semibold text-[#777777] leading-7">
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+                <br />
+                <h4 class="font-bold text-base">Ilham Yuda</h4>
+                <h4 class="text-base font-semibold text-[#777777]">
+                  Businessman
+                </h4>
+              </div>
+            </div>
           </div>
         </div>
       </section>
