--- a/index.html
+++ b/index.html
@@ -296,9 +296,93 @@
         </div>
       </section>
 
-      
+      <!-- News Section -->
+      <section class="mb-24">
+        <!-- title -->
+        <div class="text-center">
+          <h1 class="text-5xl font-extrabold mb-5">News & Events</h1>
+          <p class="text-base font-medium leading-7 text-[#777777]">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+        </div>
+      </section>
     </main>
 
-    <footer></footer>
+    <footer
+      class="bg-gradient-to-r from-[#FF89381A] to-[#FF00001A] font-normal"
+    >
+      <div
+        class="max-w-screen-lg mx-auto px-5 py-10 md:px-0 md:py-32 text-[#494949]"
+      >
+        <!-- logo -->
+        <div class="mb-20 flex flex-col md:flex-row justify-between sm:gap-5">
+          <img class="w-16 h-auto" src="images/Frame.svg" alt="" />
+          <div class="flex items-center gap-10 justify-center">
+            <h4 class="text-xl font-medium">Ready to get strated?</h4>
+            <button
+              class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white font-bold text-lg px-6 py-3 rounded-lg"
+            >
+              Get Started
+            </button>
+          </div>
+        </div>
+
+        <!-- Links -->
+        <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-5 md:gap-0">
+          <!-- Links column -->
+          <div>
+            <h3 class="text-black font-semibold text-xl mb-5">Quick Links</h3>
+            <div class="flex flex-col gap-4 text-base">
+              <a href="">Home</a><a href="">About Us</a><a href="">Insurance</a
+              ><a href="">Privacy Policy</a>
+            </div>
+          </div>
+          <!-- Services column -->
+          <div>
+            <h3 class="text-black font-semibold text-xl mb-5">Our Service</h3>
+            <div class="flex flex-col gap-4 text-base">
+              <a href="">Life Insurance</a><a href="">Car Insurance</a
+              ><a href="">Health Insurance</a><a href="">House Insurance</a>
+            </div>
+          </div>
+          <!-- Help column -->
+          <div>
+            <h3 class="text-black font-semibold text-xl mb-5">Help</h3>
+            <div class="flex flex-col gap-4 text-base">
+              <a href="">FAQs</a><a href="">Contact Us</a>
+            </div>
+          </div>
+          <!-- Newsletter column -->
+          <div>
+            <h3 class="text-black font-semibold text-xl mb-5">
+              Subscribe to our newsletter
+            </h3>
+            <div class="flex items-center">
+              <input
+                class="text-sm py-5 font-medium bg-transparent border-[#494949] border-b-2 w-5/6"
+                type="email"
+                placeholder="Email address"
+              />
+              <i
+                class="fa-solid fa-chevron-right text-white bg-gradient-to-l from-[#ff0000] to-[#ff8937] inline-flex justify-center items-center w-9 h-9 rounded-full"
+              ></i>
+            </div>
+            <div class="flex gap-6 mt-12">
+              <a href=""><i class="fa-brands fa-facebook-f fa-lg"></i></a>
+              <a href=""><i class="fa-brands fa-x-twitter fa-lg"></i></a>
+              <a href=""><i class="fa-brands fa-instagram fa-lg"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Copyright -->
+        <div class="mt-14 text-center">
+          <h5 class="font-medium">© 2027 UIDesign.to - All rights reserved.</h5>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
