--- a/index.html
+++ b/index.html
@@ -299,14 +299,77 @@
       <!-- News Section -->
       <section class="mb-24">
         <!-- title -->
-        <div class="text-center">
+        <div class="flex flex-col items-center justify-center text-center mb-12">
           <h1 class="text-5xl font-extrabold mb-5">News & Events</h1>
-          <p class="text-base font-medium leading-7 text-[#777777]">
-            There are many variations of passages of Lorem Ipsum available, but
-            the majority have suffered alteration in some form, by injected
-            humour, or randomised words which don't look even slightly
-            believable.
-          </p>
+            <p class="text-base font-medium leading-7 text-[#777777] w-full md:w-4/5 text-center">
+              There are many variations of passages of Lorem Ipsum available, but
+              the majority have suffered alteration in some form, by injected
+              humour, or randomised words which don't look even slightly
+              believable.
+            </p>
+        </div>
+        <!-- card container -->
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-5">
+          <!-- card-1 -->
+          <div class="rounded-lg border border-[#D2D2D2] p-5">
+            <div class="flex flex-col justify-center items-center">
+              <img class="" src="images/news-1.png" alt="" />
+              <!-- text -->
+              <div class="flex flex-col gap-2 mt-5">
+                <p class="text-base font-medium leading-7 text-[#777777]">
+                  Feb 05, 2027
+                </p>
+                <h4 class="text-xl font-extrabold leading-normal">
+                  Collecting 8 points for discount
+                </h4>
+                <p class="text-base font-medium leading-7 text-[#777777]">
+                  There are many variations of passages of Lorem Ipsum
+                  available.
+                </p>
+                <h6 class="text-base font-bold"><a href="">Learn More</a></h6>
+              </div>
+            </div>
+          </div>
+          <!-- card-2 -->
+          <div class="rounded-lg border border-[#D2D2D2] p-5">
+            <div class="flex flex-col justify-center items-center">
+              <img class="" src="images/news-2.png" alt="" />
+              <!-- text -->
+              <div class="flex flex-col gap-2 mt-5">
+                <p class="text-base font-medium leading-7 text-[#777777]">
+                  Feb 05, 2027
+                </p>
+                <h4 class="text-xl font-extrabold leading-normal">
+                  Collecting 8 points for discount
+                </h4>
+                <p class="text-base font-medium leading-7 text-[#777777]">
+                  There are many variations of passages of Lorem Ipsum
+                  available.
+                </p>
+                <h6 class="text-base font-bold"><a href="">Learn More</a></h6>
+              </div>
+            </div>
+          </div>
+          <!-- card-3 -->
+          <div class="rounded-lg border border-[#D2D2D2] p-5">
+            <div class="flex flex-col justify-center items-center">
+              <img class="" src="images/news-3.png" alt="" />
+              <!-- text -->
+              <div class="flex flex-col gap-2 mt-5">
+                <p class="text-base font-medium leading-7 text-[#777777]">
+                  Feb 05, 2027
+                </p>
+                <h4 class="text-xl font-extrabold leading-normal">
+                  Collecting 8 points for discount
+                </h4>
+                <p class="text-base font-medium leading-7 text-[#777777]">
+                  There are many variations of passages of Lorem Ipsum
+                  available.
+                </p>
+                <h6 class="text-base font-bold"><a href="">Learn More</a></h6>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
@@ -331,7 +394,9 @@
         </div>
 
         <!-- Links -->
-        <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-5 md:gap-0">
+        <div
+          class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-5 md:gap-0"
+        >
           <!-- Links column -->
           <div>
             <h3 class="text-black font-semibold text-xl mb-5">Quick Links</h3>
